--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "images/logo-72x72.png",
+      "src": "images/logo-72x72.PNG",
       "sizes": "72x72",
       "type": "image/png"
     },
@@ -24,7 +24,7 @@
       "type": "image/png"
     },
     {
-      "src": "images/logo-144x144.png",
+      "src": "images/logo-144x144.PNG",
       "sizes": "144x144",
       "type": "image/png"
     },
